[gd_scene load_steps=2 format=3 uid="uid://biljgomemmnhc"]

[ext_resource type="Script" uid="uid://uup87w8r0a8g" path="res://Scripts/ui.gd" id="1_jxero"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jxero")

[node name="ThirstBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.494118, 1, 1)
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.97
anchor_right = 0.35
anchor_bottom = 0.98
offset_top = -27.0
offset_right = 4.0
grow_vertical = 0
value = 100.0

[node name="HungerBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.92
anchor_right = 0.35
anchor_bottom = 0.93
offset_top = -27.0
offset_right = 4.0
grow_vertical = 0
value = 100.0

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.87
anchor_right = 0.35
anchor_bottom = 0.88
offset_top = -27.0
offset_right = 4.0
grow_vertical = 0
value = 100.0
